@@ -9,6 +9,7 @@
 ## -------------------------------------------
 ## This file is part of eCos, the Embedded Configurable Operating System.
 ## Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+## Copyright (C) 2004 eCosCentric Limited
 ##
 ## eCos is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free
@@ -111,7 +112,7 @@ cdl_package CYGPKG_FS_ROM {
             display "ROM filesystem tests"
             flavor  data
             no_define
-            calculated { "tests/fileio1" }
+            calculated { "tests/romfs1" }
                 description   "
                     This option specifies the set of tests for the ROM filesystem package."
         }
