@@ -1,3 +1,9 @@
+2004-12-13  John Dallaway  <jld@ecoscentric.com>
+
+	* tests/fileio1.c: Rename to ramfs1.c. eCos test names should be
+	unique.
+	* cdl/ramfs.cdl: Build the ramfs1 test.
+
 2004-03-29  Andrew Lunn  <andrew.lunn@ascom.ch>
 
         * test/fseek1.c: Test the fseek/ftell functions
@@ -72,6 +78,7 @@
 // -------------------------------------------
 // This file is part of eCos, the Embedded Configurable Operating System.
 // Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+// Copyright (C) 2004 eCosCentric Limited
 //
 // eCos is free software; you can redistribute it and/or modify it under
 // the terms of the GNU General Public License as published by the Free
